add favorite notes
